# roanoke-engine

./: .gitignore  AGENT_SCOPE.md  AGENT_SCOPE_LOCK.md  CHUNK_OPTIMIZATION_COMPLETE.md  Cargo.toml  DEVELOPMENT_LOG.md  GRASS_AND_TREES_INTEGRATED.md  GRASS_INTEGRATION_COMPLETE.md  PROCGEN_FRAMEWORK.md  RECOVERY.md  ROADMAP.md  RUN_COMMAND.md  TREE_OPTIMIZATION_COMPLETE.md  TREE_SYSTEM_COMPLETE.md  VEGETATION_PER_CHUNK_COMPLETE.md  VOBJ_SPECIFICATION.md  VRAM_OBSERVABILITY_SPEC.md  llms.txt  test_noise.rs
.claude/: settings.local.json
assets/shaders/: building.wgsl  coastline.wgsl  detritus.wgsl  grass.wgsl  sky.wgsl  sun.wgsl  terrain.wgsl  tree.wgsl  water.wgsl  water_compute.wgsl
assets/ui/: README.md
assets/ui/loading/: README.md
crates/croatoan_core/: Cargo.toml
crates/croatoan_core/src/: lib.rs
crates/croatoan_neural/: Cargo.toml
crates/croatoan_procgen/: Cargo.toml  README.md
crates/croatoan_procgen/examples/: grass_demo.rs  tree_demo.rs
crates/croatoan_procgen/src/: building.rs  grass.rs  lib.rs  rock.rs  tree.rs
crates/croatoan_render/: Cargo.toml
crates/croatoan_render/src/: building_pipeline.rs  camera.rs  detritus_pipeline.rs  frustum.rs  grass_pipeline.rs  lib.rs  shadows.rs  sky_pipeline.rs  sun_pipeline.rs  terrain_pipeline.rs  tree_pipeline.rs
crates/croatoan_wfc/: Cargo.toml
crates/croatoan_wfc/examples/: test_noise.rs
crates/croatoan_wfc/src/: buildings.rs  lib.rs  mesh_gen.rs  noise_util.rs  rocks.rs  seed.rs  trees.rs  vegetation.rs
roanoke_game/: Cargo.toml
roanoke_game/src/: asset_loader.rs  chunk_manager.rs  main.rs  player.rs  water_system.rs  weather_system.rs
