[package]
name = "roanoke_game"
version = "0.1.0"
edition = "2021"

[dependencies]
croatoan_core = { path = "../crates/croatoan_core" }
croatoan_render = { path = "../crates/croatoan_render" }
croatoan_wfc = { path = "../crates/croatoan_wfc" }
wgpu = { workspace = true }
glam = { workspace = true }
log = { workspace = true }

# UI
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Physics
rand = "0.8"
