[package]
name = "roanoke_game"
version = "0.1.0"
edition = "2021"

[dependencies]
croatoan_core = { path = "../crates/croatoan_core" }
croatoan_render = { path = "../crates/croatoan_render" }
croatoan_wfc = { path = "../crates/croatoan_wfc" }
croatoan_procgen = { path = "../crates/croatoan_procgen" }
wgpu = { workspace = true }
glam = { workspace = true }
log = { workspace = true }

# UI
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Physics
rand = "0.8"
tobj = { version = "4.0", features = ["async"] }
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
